examples/datalog/11_types/36_int_float_arithmetic.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_int_float
Knowledge graph 'test_int_float' created.
Switched to knowledge graph: test_int_float
> .kg use test_int_float
Switched to knowledge graph: test_int_float
> +ints[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'ints'.
> +floats[(1.5,), (2.5,), (3.5,)].
Inserted 3 fact(s) into 'floats'.
> int_plus_float(X, Y) :- ints(X), Y = X + 0.5.
Script error: Parse error: Invalid arithmetic expression: '0.5'
