examples/datalog/11_types/36_int_float_arithmetic.dl
% Test: Mixed int/float arithmetic
% Expected: Correct numeric promotion
% Category: 11_types
% Priority: P2 - Type patterns

.kg create test_int_float
.kg use test_int_float

+ints[(1,), (2,), (3,)].
+floats[(1.5,), (2.5,), (3.5,)].

% Int + float constant
int_plus_float(X, Y) :- ints(X), Y = X + 0.5.

?- int_plus_float(X, Y).

.kg use default
.kg drop test_int_float
